typescript/checker/tests/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration8.ts.stderr
error: TS2391 {
    span: Span {
        lo: BytePos(
            13,
        ),
        hi: BytePos(
            24,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration8.ts:2:3
  |
2 |   constructor();
  |   ^^^^^^^^^^^

